Bug 291734 - BasicAuthenticationCallHook uses sun.misc.BASE64Encoder